Fixed editor dialog on smaller screens

--- a/assets/css/flows4apex.modeler.properties-panel.css
+++ b/assets/css/flows4apex.modeler.properties-panel.css
@@ -573,7 +573,7 @@ ul.bpp-properties-tabs-links > li.bpp-active a {
 .modal {
   display: none;
   position: fixed;
-  z-index: 11;
+  z-index: 999;
   left: 0;
   top: 0;
   width: 100%;
